[OOTD-375/BE,FE] fix: 카드 상태를 상중하 enum으로 제한한다
