# pickup/src/main/java/com/ootd/pickup/consignments/dto/response/RegisterConsignmentResponse.java
@@ -1,6 +1,7 @@
 package com.ootd.pickup.consignments.dto.response;
 
 import com.ootd.pickup.cards.dto.response.SearchCardsResponse;
+import com.ootd.pickup.consignments.domain.CardState;
 import com.ootd.pickup.consignments.domain.Certificate;
 import com.ootd.pickup.consignments.domain.Consignment;
 import com.ootd.pickup.consignments.domain.ConsignmentStatus;
@@ -9,7 +10,7 @@ public record RegisterConsignmentResponse(
     Long consignmentId,
     SearchCardsResponse card,
     Long sellerMemberId,
-    String cardState,
+    CardState cardState,
     String majorDefect,
     ConsignmentStatus status,
     CertificateResponse certificate) {
